Gtk-3.20&3.22&4.0: [Vala-panel] Fix missing decoration styling behind popup-ed window nodes

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -4195,7 +4195,7 @@ window#ValaPanel.background { // solid-mode
   background-color: $panel_bg_color;
   color: $inverted_fg_color;
 
-  decoration { all: unset; } // unset all decorations
+  > decoration { all: unset; } // unset root decoration
 
   widget.-vala-panel-background > separator { // separator applet
     background-color: $panel_separator_color;
